--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,23 +1,99 @@
-# The name of this app. Must be unique within a project.
-name: app
+# Complete list of all available properties: https://docs.platform.sh/create-apps/app-reference.html
 
-# The runtime the application uses. The 'type' key defines the base container
-# image that will be used to run the application. There is a separate base
-# container image for each primary language for the application,
-# in multiple versions. Check the Python documentation
-# (https://docs.platform.sh/languages/python.html#supported-versions)
-# to find the supported versions for the 'python' type.
-type: 'python:3.12'
+# A unique name for the app. Must be lowercase alphanumeric characters. Changing the name destroys data associated
+# with the app.
+name: 'app'
 
-# The following block defines a single writable directory, 'web/uploads'
-# The 'source' specifies where the writable mount is. The 'local' source
-# indicates that the mount point will point to a local directory on the
-# application container. The 'source_path' specifies the subdirectory
-# from within the source that the mount should point at. 
+# The runtime the application uses.
+# Complete list of available runtimes: https://docs.platform.sh/create-apps/app-reference.html#types
+type: 'python:3.11'
+
+# The relationships of the application with services or other applications.
+# The left-hand side is the name of the relationship as it will be exposed
+# to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
+# side is in the form `<service name>:<endpoint name>`.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#relationships
+relationships:
+  database: "db:mysql"
+  rediscache: "cache:redis"
+
+# The size of the persistent disk of the application (in MB). Minimum value is 128.
+disk: 1024
+# The web key configures the web server running in front of your app.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#web
+web:
+  # Commands are run once after deployment to start the application process.
+  # More information: https://docs.platform.sh/create-apps/app-reference.html#web-commands
+  commands:
+    # The command to launch your app. If it terminates, it’s restarted immediately.
+    start: "pipenv run python server.py"
+
+# Installs global dependencies as part of the build process. They’re independent of your app’s dependencies and
+# are available in the PATH during the build process and in the runtime environment. They’re installed before
+# the build hook runs using a package manager for the language.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#dependencies
+dependencies:
+  python3:
+    pipenv: '2023.2.4'
+
+# Hooks allow you to customize your code/environment as the project moves through the build and deploy stages
+# More information: https://docs.platform.sh/create-apps/app-reference.html#hooks
+hooks:
+  # The build hook is run after any build flavor.
+  # More information: https://docs.platform.sh/create-apps/hooks/hooks-comparison.html#build-hook
+  build: |
+    set -eu
+
+    # Download the latest version of pip
+    python3.11 -m pip install --upgrade pip
+    pipenv --python 3.11
+
+    # Install dependencies
+    pipenv install --deploy
+
+# Information on the app's source code and operations that can be run on it.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#source
+source:
+  ######################################################################################################################
+  ##                                                                                                                  ##
+  ## This source operation is part of the Platform.sh process of updating and maintaining our collection of           ##
+  ## templates. For more information see https://docs.platform.sh/create-apps/source-operations.html and              ##
+  ## https://github.com/platformsh/source-operations                                                                  ##
+  ##                                                                                                                  ##
+  ##                  YOU CAN SAFELY DELETE THIS COMMENT AND THE LINES BENEATH IT                                     ##
+  ##                                                                                                                  ##
+  ######################################################################################################################
+  operations:
+    auto-update:
+      command: |
+        curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
+
 mounts:
-  'web/uploads':
+  '.cache':
     source: local
-    source_path: uploads
+    source_path: cache
 
-# The size of the persistent disk of the application (in MB).
-disk: 2048
+
+# # The name of this app. Must be unique within a project.
+# name: app
+
+# # The runtime the application uses. The 'type' key defines the base container
+# # image that will be used to run the application. There is a separate base
+# # container image for each primary language for the application,
+# # in multiple versions. Check the Python documentation
+# # (https://docs.platform.sh/languages/python.html#supported-versions)
+# # to find the supported versions for the 'python' type.
+# type: 'python:3.12'
+
+# # The following block defines a single writable directory, 'web/uploads'
+# # The 'source' specifies where the writable mount is. The 'local' source
+# # indicates that the mount point will point to a local directory on the
+# # application container. The 'source_path' specifies the subdirectory
+# # from within the source that the mount should point at. 
+# mounts:
+#   'web/uploads':
+#     source: local
+#     source_path: uploads
+
+# # The size of the persistent disk of the application (in MB).
+# disk: 2048
