chore: update platform app yaml

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -13,9 +13,9 @@ type: 'python:3.11'
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 # More information: https://docs.platform.sh/create-apps/app-reference.html#relationships
-relationships:
-  # database: "db:mysql"
-  rediscache: "cache:redis"
+# relationships:
+#   # database: "db:mysql"
+#   rediscache: "cache:redis"
 
 # The size of the persistent disk of the application (in MB). Minimum value is 128.
 disk: 1024
